--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <meta property="og:title" content="SPWN - Speedruns Leaderboard" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="A programming language for Geometry Dash" />
+    <meta property="og:description" content="A programming language for Geometry Dash https://discord.gg/amgmf5957T" />
     <meta property="og:url" content="fl1pnatic.github.io/spwnrun" />
     <meta property="og:image" content="https://fl1pnatic.github.io/spwnrun/assets/img/logo.png" />
     <meta property="og:image:secure_url" content="https://fl1pnatic.github.io/spwnrun/assets/img/logo.png" />
@@ -25,7 +25,7 @@
 <body>
     <h1>SPWN</h1>
     <h2 class="reduceTopMargin">Speedruns</h2>
-    <p>A programming language for Geometry Dash</p>
+    <p>A programming language for Geometry Dash https://discord.gg/amgmf5957T</p>
 
     <h2>Categories</h2>
     <div class="reduceTopMargin" style="text-align: center;"><a class="categoryLink" href="categories/Any">Any%</a><a class="categoryLink" href="categories/ArchInstall">ArchInstall%</a><a class="categoryLink" href="categories/Low">Low%</a><a class="categoryLink" href="categories/100">100%</a><a class="categoryLink" href="categories/1000">1000%</a><a class="categoryLink" href="categories/Mastergame">Mastergame%</a><a class="categoryLink" href="categories/Meme">Meme%</a></div>
