--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <p>A programming language for Geometry Dash https://discord.gg/amgmf5957T</p>
 
     <h2>Categories</h2>
-    <div class="reduceTopMargin" style="text-align: center;"><a class="categoryLink" href="categories/Any">Any%</a><a class="categoryLink" href="categories/ArchInstall">ArchInstall%</a><a class="categoryLink" href="categories/Low">Low%</a><a class="categoryLink" href="categories/100">100%</a><a class="categoryLink" href="categories/1000">1000%</a><a class="categoryLink" href="categories/Mastergame">Mastergame%</a><a class="categoryLink" href="categories/Meme">Meme%</a></div>
+    <div class="reduceTopMargin" style="text-align: center;"><a class="categoryLink" href="categories/Any">Any%</a><a class="categoryLink" href="categories/ArchInstall">ArchInstall%</a><a class="categoryLink" href="categories/Low">Low%</a><a class="categoryLink" href="categories/100">100%</a><a class="categoryLink" href="categories/1000">1000%</a><a class="categoryLink" href="categories/Mastergame">Mastergame%</a><a class="categoryLink" href="categories/Meme">Meme%</a><a class="categoryLink" href="categories/Rules">Rules</a></div>
 </body>
 
 </html>
