restored the lb

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <meta property="og:title" content="SPWN - Speedruns Leaderboard" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="A programming language for Geometry Dash https://discord.gg/amgmf5957T" />
-    <meta property="og:url" content="fl1pnatic.github.io/spwnrun" />
-    <meta property="og:image" content="https://fl1pnatic.github.io/spwnrun/assets/img/logo.png" />
-    <meta property="og:image:secure_url" content="https://fl1pnatic.github.io/spwnrun/assets/img/logo.png" />
-    <meta property="og:image:alt" content="" />
+    <meta property="og:url" content="https://fl1pnatic.github.io/spwnrun/" />
+    <meta property="og:image" content="https://https://fl1pnatic.github.io/spwnrun//assets/img/logo.png" />
+    <meta property="og:image:secure_url" content="https://https://fl1pnatic.github.io/spwnrun//assets/img/logo.png" />
+    <meta property="og:image:alt" content="SPWN FTW" />
 
     <!-- Placeholder og:locale, replace content with your own if desired. -->
     <meta property="og:locale" content="en_US" />
@@ -28,7 +28,7 @@
     <p>A programming language for Geometry Dash https://discord.gg/amgmf5957T</p>
 
     <h2>Categories</h2>
-    <div class="reduceTopMargin" style="text-align: center;"><a class="categoryLink" href="categories/Any">Any%</a><a class="categoryLink" href="categories/ArchInstall">ArchInstall%</a><a class="categoryLink" href="categories/Low">Low%</a><a class="categoryLink" href="categories/100">100%</a><a class="categoryLink" href="categories/1000">1000%</a><a class="categoryLink" href="categories/Mastergame">Mastergame%</a><a class="categoryLink" href="categories/Meme">Meme%</a><a class="categoryLink" href="categories/Rules">Rules</a></div>
+    <div class="reduceTopMargin" style="text-align: center;"><a class="categoryLink" href="categories/Any">Any%</a><a class="categoryLink" href="categories/ArchInstall">ArchInstall%</a><a class="categoryLink" href="categories/Low">Low%</a><a class="categoryLink" href="categories/100">100%</a><a class="categoryLink" href="categories/1000">1000%</a><a class="categoryLink" href="categories/Mastergame">Mastergame%</a><a class="categoryLink" href="categories/Meme">Meme%</a></div>
 </body>
 
 </html>
