--- a/runs/1/index.html
+++ b/runs/1/index.html
@@ -5,29 +5,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tk_game_name - Any% - bombie</title>
+    <title>SPWN - Any% - sertdfyguhi</title>
 
     <link rel="stylesheet" href="../../css/style.css">
     <link rel="icon" href="../../assets/img/logo.png">
 
-    <meta property="og:title" content="tk_game_name - Any% - bombie" />
+    <meta property="og:title" content="SPWN - Any% - sertdfyguhi" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="" />
-    <meta property="og:url" content="tk_url/1/index.html" />
-    <meta property="og:image" content="https://tk_url/assets/img/logo.png" />
-    <meta property="og:image:secure_url" content="https://tk_url/assets/img/logo.png" />
-    <meta property="og:image:alt" content="tk_logo_alt" />
+    <meta property="og:url" content="https://fl1pnatic.github.io/spwnrun//1/index.html" />
+    <meta property="og:image" content="https://https://fl1pnatic.github.io/spwnrun//assets/img/logo.png" />
+    <meta property="og:image:secure_url" content="https://https://fl1pnatic.github.io/spwnrun//assets/img/logo.png" />
+    <meta property="og:image:alt" content="SPWN FTW" />
 
     <!-- Placeholder og:locale, replace content with your own if desired. -->
     <meta property="og:locale" content="en_US" />
 </head>
 
 <body>
-    <h1><a href="../../">tk_game_name</a> - <a href="../../categories/Any">Any%</a></h1>
-    <h2 class="reduceTopMargin">bombie's run</h2>
+    <h1><a href="../../">SPWN</a> - <a href="../../categories/Any">Any%</a></h1>
+    <h2 class="reduceTopMargin">sertdfyguhi's run</h2>
     <div class="runContainer">
-        <p>lk_run_duration (rank #lk_run_place)</p>
-        <p class="reduceTopMargin">lk_run_link</p>
+        <p>0:01:12 (rank #1)</p>
+        <p class="reduceTopMargin"><a class="runLink" href="https://cdn.discordapp.com/attachments/897932486250758165/898417948358750248/Screen_Recording_2021-10-15_at_11.49.18_AM.mov">Run recording</a></p>
     </div>
     <p class="runDescription"><em></em></p>
     <p>Verified by <strong>Fl1pNatic</strong> - Took place on <strong>10/15/2021</strong></p>
