--- a/runs/2/index.html
+++ b/runs/2/index.html
@@ -5,32 +5,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SPWN - ArchInstall% - tags</title>
+    <title>SPWN - Any% - bombie</title>
 
     <link rel="stylesheet" href="../../css/style.css">
     <link rel="icon" href="../../assets/img/logo.png">
 
-    <meta property="og:title" content="SPWN - ArchInstall% - tags" />
+    <meta property="og:title" content="SPWN - Any% - bombie" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="" />
-    <meta property="og:url" content="fl1pnatic.github.io/spwnrun/2/index.html" />
-    <meta property="og:image" content="https://fl1pnatic.github.io/spwnrun/assets/img/logo.png" />
-    <meta property="og:image:secure_url" content="https://fl1pnatic.github.io/spwnrun/assets/img/logo.png" />
-    <meta property="og:image:alt" content="" />
+    <meta property="og:url" content="https://fl1pnatic.github.io/spwnrun//2/index.html" />
+    <meta property="og:image" content="https://https://fl1pnatic.github.io/spwnrun//assets/img/logo.png" />
+    <meta property="og:image:secure_url" content="https://https://fl1pnatic.github.io/spwnrun//assets/img/logo.png" />
+    <meta property="og:image:alt" content="SPWN FTW" />
 
     <!-- Placeholder og:locale, replace content with your own if desired. -->
     <meta property="og:locale" content="en_US" />
 </head>
 
 <body>
-    <h1><a href="../../">SPWN</a> - <a href="../../categories/ArchInstall">ArchInstall%</a></h1>
-    <h2 class="reduceTopMargin">tags's run</h2>
+    <h1><a href="../../">SPWN</a> - <a href="../../categories/Any">Any%</a></h1>
+    <h2 class="reduceTopMargin">bombie's run</h2>
     <div class="runContainer">
-        <p>0:32:12 (rank #1)</p>
-        <p class="reduceTopMargin"><a class="runLink" href="https://cdn.discordapp.com/attachments/897932486250758165/898583526516072458/install.mp4">Run recording</a></p>
+        <p>0:22:00 (rank #2)</p>
+        <p class="reduceTopMargin"><a class="runLink" href="https://cdn.discordapp.com/attachments/897932486250758165/897943095189045248/2021-10-13_23-19-51.mp4">Run recording</a></p>
     </div>
     <p class="runDescription"><em></em></p>
-    <p>Verified by <strong>Fl1pNatic</strong> - Took place on <strong>10/15/2021</strong></p>
+    <p>Verified by <strong>Fl1pNatic</strong> - Took place on <strong>10/14/2021</strong></p>
 </body>
 
 </html>
