--- a/runs/5/index.html
+++ b/runs/5/index.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SPWN - Low% - litecave</title>
+    <title>SPWN - Low% - Deltara</title>
 
     <link rel="stylesheet" href="../../css/style.css">
     <link rel="icon" href="../../assets/img/logo.png">
 
-    <meta property="og:title" content="SPWN - Low% - litecave" />
+    <meta property="og:title" content="SPWN - Low% - Deltara" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="" />
-    <meta property="og:url" content="fl1pnatic.github.io/spwnrun/5/index.html" />
-    <meta property="og:image" content="https://fl1pnatic.github.io/spwnrun/assets/img/logo.png" />
-    <meta property="og:image:secure_url" content="https://fl1pnatic.github.io/spwnrun/assets/img/logo.png" />
-    <meta property="og:image:alt" content="" />
+    <meta property="og:url" content="https://fl1pnatic.github.io/spwnrun//5/index.html" />
+    <meta property="og:image" content="https://https://fl1pnatic.github.io/spwnrun//assets/img/logo.png" />
+    <meta property="og:image:secure_url" content="https://https://fl1pnatic.github.io/spwnrun//assets/img/logo.png" />
+    <meta property="og:image:alt" content="SPWN FTW" />
 
     <!-- Placeholder og:locale, replace content with your own if desired. -->
     <meta property="og:locale" content="en_US" />
@@ -24,10 +24,10 @@
 
 <body>
     <h1><a href="../../">SPWN</a> - <a href="../../categories/Low">Low%</a></h1>
-    <h2 class="reduceTopMargin">litecave's run</h2>
+    <h2 class="reduceTopMargin">Deltara's run</h2>
     <div class="runContainer">
-        <p>0:06:24 (rank #2)</p>
-        <p class="reduceTopMargin"><a class="runLink" href="https://youtu.be/b7u6_3mhBPQ">Run recording</a></p>
+        <p>0:01:27 (rank #2)</p>
+        <p class="reduceTopMargin"><a class="runLink" href="https://cdn.discordapp.com/attachments/897932486250758165/898374663938375751/2021-10-14_20-58-34.mp4">Run recording</a></p>
     </div>
     <p class="runDescription"><em></em></p>
     <p>Verified by <strong>Fl1pNatic</strong> - Took place on <strong>10/15/2021</strong></p>
