--- a/runs/6/index.html
+++ b/runs/6/index.html
@@ -13,10 +13,10 @@
     <meta property="og:title" content="SPWN - Low% - litecave" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="" />
-    <meta property="og:url" content="fl1pnatic.github.io/spwnrun/6/index.html" />
-    <meta property="og:image" content="https://fl1pnatic.github.io/spwnrun/assets/img/logo.png" />
-    <meta property="og:image:secure_url" content="https://fl1pnatic.github.io/spwnrun/assets/img/logo.png" />
-    <meta property="og:image:alt" content="" />
+    <meta property="og:url" content="https://fl1pnatic.github.io/spwnrun//6/index.html" />
+    <meta property="og:image" content="https://https://fl1pnatic.github.io/spwnrun//assets/img/logo.png" />
+    <meta property="og:image:secure_url" content="https://https://fl1pnatic.github.io/spwnrun//assets/img/logo.png" />
+    <meta property="og:image:alt" content="SPWN FTW" />
 
     <!-- Placeholder og:locale, replace content with your own if desired. -->
     <meta property="og:locale" content="en_US" />
@@ -26,7 +26,7 @@
     <h1><a href="../../">SPWN</a> - <a href="../../categories/Low">Low%</a></h1>
     <h2 class="reduceTopMargin">litecave's run</h2>
     <div class="runContainer">
-        <p>0:06:24 (rank #3)</p>
+        <p>0:06:24 (rank #4)</p>
         <p class="reduceTopMargin"><a class="runLink" href="https://youtu.be/b7u6_3mhBPQ">Run recording</a></p>
     </div>
     <p class="runDescription"><em></em></p>
