--- a/runs/8/index.html
+++ b/runs/8/index.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SPWN - Low% - sertdfyguhi</title>
+    <title>SPWN - Low% - LiteCave</title>
 
     <link rel="stylesheet" href="../../css/style.css">
     <link rel="icon" href="../../assets/img/logo.png">
 
-    <meta property="og:title" content="SPWN - Low% - sertdfyguhi" />
+    <meta property="og:title" content="SPWN - Low% - LiteCave" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="" />
-    <meta property="og:url" content="https://fl1pnatic.github.io/spwnrun//4/index.html" />
+    <meta property="og:url" content="https://fl1pnatic.github.io/spwnrun//8/index.html" />
     <meta property="og:image" content="https://https://fl1pnatic.github.io/spwnrun//assets/img/logo.png" />
     <meta property="og:image:secure_url" content="https://https://fl1pnatic.github.io/spwnrun//assets/img/logo.png" />
     <meta property="og:image:alt" content="SPWN FTW" />
@@ -24,13 +24,13 @@
 
 <body>
     <h1><a href="../../">SPWN</a> - <a href="../../categories/Low">Low%</a></h1>
-    <h2 class="reduceTopMargin">sertdfyguhi's run</h2>
+    <h2 class="reduceTopMargin">LiteCave's run</h2>
     <div class="runContainer">
-        <p>0:01:22 (rank #1)</p>
-        <p class="reduceTopMargin"><a class="runLink" href="https://cdn.discordapp.com/attachments/897932486250758165/898371515958059048/Screen_Recording_2021-10-15_at_8.46.03_AM.mov">Run recording</a></p>
+        <p>0:03:14 (rank #4)</p>
+        <p class="reduceTopMargin"><a class="runLink" href="https://youtu.be/jNPPAfUz_dw">Run recording</a></p>
     </div>
     <p class="runDescription"><em></em></p>
-    <p>Verified by <strong>Fl1pNatic</strong> - Took place on <strong>15/10/2021</strong></p>
+    <p>Verified by <strong>Deltara</strong> - Took place on <strong>15/10/2021</strong></p>
 </body>
 
 </html>
