Play video directly on browser
- Changed template
- Minor change to the script: scripts/utils/gen/runs.py (Replacing "lk_run_link" with a LINK instead of a HTML ANCHOR TAG)
- Regenerate the runs yay

--- a/runs/3/index.html
+++ b/runs/3/index.html
@@ -27,7 +27,10 @@
     <h2 class="reduceTopMargin">tags's run</h2>
     <div class="runContainer">
         <p>0:32:12 (rank #1)</p>
-        <p class="reduceTopMargin"><a class="runLink" href="https://cdn.discordapp.com/attachments/897932486250758165/898583526516072458/install.mp4">Run recording</a></p>
+        <video width="723" height="409" controls>
+            <source src="https://cdn.discordapp.com/attachments/897932486250758165/898583526516072458/install.mp4">
+        </video><br><br>
+        <p class="reduceTopMargin"><a class="runLink" href="https://cdn.discordapp.com/attachments/897932486250758165/898583526516072458/install.mp4">Raw video file</a></p>
     </div>
     <p class="runDescription"><em></em></p>
     <p>Verified by <strong>Fl1pNatic</strong> - Took place on <strong>10/15/2021</strong></p>
