--- a/runs/6/index.html
+++ b/runs/6/index.html
@@ -27,7 +27,10 @@
     <h2 class="reduceTopMargin">litecave's run</h2>
     <div class="runContainer">
         <p>0:06:24 (rank #5)</p>
-        <p class="reduceTopMargin"><a class="runLink" href="https://youtu.be/b7u6_3mhBPQ">Run recording</a></p>
+        <video width="723" height="409" controls>
+            <source src="https://youtu.be/b7u6_3mhBPQ">
+        </video><br><br>
+        <p class="reduceTopMargin"><a class="runLink" href="https://youtu.be/b7u6_3mhBPQ">Raw video file</a></p>
     </div>
     <p class="runDescription"><em></em></p>
     <p>Verified by <strong>Fl1pNatic</strong> - Took place on <strong>10/15/2021</strong></p>
