--- a/runs/8/index.html
+++ b/runs/8/index.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SPWN - Any% - bombie</title>
+    <title>SPWN - Low% - LiteCave</title>
 
     <link rel="stylesheet" href="../../css/style.css">
     <link rel="icon" href="../../assets/img/logo.png">
 
-    <meta property="og:title" content="SPWN - Any% - bombie" />
+    <meta property="og:title" content="SPWN - Low% - LiteCave" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="" />
-    <meta property="og:url" content="https://fl1pnatic.github.io/spwnrun//2/index.html" />
+    <meta property="og:url" content="https://fl1pnatic.github.io/spwnrun//8/index.html" />
     <meta property="og:image" content="https://https://fl1pnatic.github.io/spwnrun//assets/img/logo.png" />
     <meta property="og:image:secure_url" content="https://https://fl1pnatic.github.io/spwnrun//assets/img/logo.png" />
     <meta property="og:image:alt" content="SPWN FTW" />
@@ -23,17 +23,17 @@
 </head>
 
 <body>
-    <h1><a href="../../">SPWN</a> - <a href="../../categories/Any">Any%</a></h1>
-    <h2 class="reduceTopMargin">bombie's run</h2>
+    <h1><a href="../../">SPWN</a> - <a href="../../categories/Low">Low%</a></h1>
+    <h2 class="reduceTopMargin">LiteCave's run</h2>
     <div class="runContainer">
-        <p>0:22:00 (rank #2)</p>
+        <p>0:03:14 (rank #4)</p>
         <video width="723" height="409" controls>
-            <source src="https://cdn.discordapp.com/attachments/897932486250758165/897943095189045248/2021-10-13_23-19-51.mp4">
+            <source src="https://youtu.be/jNPPAfUz_dw">
         </video><br><br>
-        <p class="reduceTopMargin"><a class="runLink" href="https://cdn.discordapp.com/attachments/897932486250758165/897943095189045248/2021-10-13_23-19-51.mp4">Raw video file</a></p>
+        <p class="reduceTopMargin"><a class="runLink" href="https://youtu.be/jNPPAfUz_dw">Raw video file</a></p>
     </div>
     <p class="runDescription"><em></em></p>
-    <p>Verified by <strong>Fl1pNatic</strong> - Took place on <strong>10/14/2021</strong></p>
+    <p>Verified by <strong>Deltara</strong> - Took place on <strong>10/15/2021</strong></p>
 </body>
 
 </html>
