--- a/runs/5/index.html
+++ b/runs/5/index.html
@@ -27,7 +27,10 @@
     <h2 class="reduceTopMargin">Deltara's run</h2>
     <div class="runContainer">
         <p>0:01:27 (rank #2)</p>
-        <p class="reduceTopMargin"><a class="runLink" href="https://cdn.discordapp.com/attachments/897932486250758165/898374663938375751/2021-10-14_20-58-34.mp4">Run recording</a></p>
+        <video width="723" height="409" controls>
+            <source src="https://cdn.discordapp.com/attachments/897932486250758165/898374663938375751/2021-10-14_20-58-34.mp4">
+        </video><br><br>
+        <p class="reduceTopMargin"><a class="runLink" href="https://cdn.discordapp.com/attachments/897932486250758165/898374663938375751/2021-10-14_20-58-34.mp4">Raw video file</a></p>
     </div>
     <p class="runDescription"><em></em></p>
     <p>Verified by <strong>Fl1pNatic</strong> - Took place on <strong>10/15/2021</strong></p>
