--- a/runs/7/index.html
+++ b/runs/7/index.html
@@ -27,7 +27,10 @@
     <h2 class="reduceTopMargin">Specky's run</h2>
     <div class="runContainer">
         <p>0:02:40 (rank #3)</p>
-        <p class="reduceTopMargin"><a class="runLink" href="https://cdn.discordapp.com/attachments/897932486250758165/898614569528856586/1lowspwn.mp4">Run recording</a></p>
+        <video width="723" height="409" controls>
+            <source src="https://cdn.discordapp.com/attachments/897932486250758165/898614569528856586/1lowspwn.mp4">
+        </video><br><br>
+        <p class="reduceTopMargin"><a class="runLink" href="https://cdn.discordapp.com/attachments/897932486250758165/898614569528856586/1lowspwn.mp4">Raw video file</a></p>
     </div>
     <p class="runDescription"><em>multi terminal strats(slow af)</em></p>
     <p>Verified by <strong>Fl1pNatic</strong> - Took place on <strong>10/15/2021</strong></p>
