YouTube embed works now
- Changed the runs template (Added lk_run_video)
- Also changed the scripts/utils/gen/runs.py (Todo: Optimize later)
- Slightly modified csv/runs.csv for YouTube videos
- Regenerated runs

--- a/runs/1/index.html
+++ b/runs/1/index.html
@@ -27,9 +27,8 @@
     <h2 class="reduceTopMargin">sertdfyguhi's run</h2>
     <div class="runContainer">
         <p>0:01:12 (rank #1)</p>
-        <video width="723" height="409" controls>
-            <source src="https://cdn.discordapp.com/attachments/897932486250758165/898417948358750248/Screen_Recording_2021-10-15_at_11.49.18_AM.mov">
-        </video><br><br>
+        <video width="723" height="409" controls><source src="https://cdn.discordapp.com/attachments/897932486250758165/898417948358750248/Screen_Recording_2021-10-15_at_11.49.18_AM.mov"></video>
+        <br><br>
         <p class="reduceTopMargin"><a class="runLink" href="https://cdn.discordapp.com/attachments/897932486250758165/898417948358750248/Screen_Recording_2021-10-15_at_11.49.18_AM.mov">Raw video file</a></p>
     </div>
     <p class="runDescription"><em></em></p>
