--- a/runs/2/index.html
+++ b/runs/2/index.html
@@ -27,9 +27,8 @@
     <h2 class="reduceTopMargin">bombie's run</h2>
     <div class="runContainer">
         <p>0:22:00 (rank #2)</p>
-        <video width="723" height="409" controls>
-            <source src="https://cdn.discordapp.com/attachments/897932486250758165/897943095189045248/2021-10-13_23-19-51.mp4">
-        </video><br><br>
+        <video width="723" height="409" controls><source src="https://cdn.discordapp.com/attachments/897932486250758165/897943095189045248/2021-10-13_23-19-51.mp4"></video>
+        <br><br>
         <p class="reduceTopMargin"><a class="runLink" href="https://cdn.discordapp.com/attachments/897932486250758165/897943095189045248/2021-10-13_23-19-51.mp4">Raw video file</a></p>
     </div>
     <p class="runDescription"><em></em></p>
