--- a/runs/6/index.html
+++ b/runs/6/index.html
@@ -27,10 +27,9 @@
     <h2 class="reduceTopMargin">litecave's run</h2>
     <div class="runContainer">
         <p>0:06:24 (rank #5)</p>
-        <video width="723" height="409" controls>
-            <source src="https://youtu.be/b7u6_3mhBPQ">
-        </video><br><br>
-        <p class="reduceTopMargin"><a class="runLink" href="https://youtu.be/b7u6_3mhBPQ">Raw video file</a></p>
+        <iframe width="727" height="409" src="https://www.youtube.com/embed/b7u6_3mhBPQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <br><br>
+        <p class="reduceTopMargin"><a class="runLink" href="https://www.youtube.com/watch?v=b7u6_3mhBPQ">Raw video file</a></p>
     </div>
     <p class="runDescription"><em></em></p>
     <p>Verified by <strong>Fl1pNatic</strong> - Took place on <strong>10/15/2021</strong></p>
