--- a/runs/3/index.html
+++ b/runs/3/index.html
@@ -27,9 +27,8 @@
     <h2 class="reduceTopMargin">tags's run</h2>
     <div class="runContainer">
         <p>0:32:12 (rank #1)</p>
-        <video width="723" height="409" controls>
-            <source src="https://cdn.discordapp.com/attachments/897932486250758165/898583526516072458/install.mp4">
-        </video><br><br>
+        <video width="723" height="409" controls><source src="https://cdn.discordapp.com/attachments/897932486250758165/898583526516072458/install.mp4"></video>
+        <br><br>
         <p class="reduceTopMargin"><a class="runLink" href="https://cdn.discordapp.com/attachments/897932486250758165/898583526516072458/install.mp4">Raw video file</a></p>
     </div>
     <p class="runDescription"><em></em></p>
