--- a/runs/4/index.html
+++ b/runs/4/index.html
@@ -27,9 +27,8 @@
     <h2 class="reduceTopMargin">sertdfyguhi's run</h2>
     <div class="runContainer">
         <p>0:01:22 (rank #1)</p>
-        <video width="723" height="409" controls>
-            <source src="https://cdn.discordapp.com/attachments/897932486250758165/898371515958059048/Screen_Recording_2021-10-15_at_8.46.03_AM.mov">
-        </video><br><br>
+        <video width="723" height="409" controls><source src="https://cdn.discordapp.com/attachments/897932486250758165/898371515958059048/Screen_Recording_2021-10-15_at_8.46.03_AM.mov"></video>
+        <br><br>
         <p class="reduceTopMargin"><a class="runLink" href="https://cdn.discordapp.com/attachments/897932486250758165/898371515958059048/Screen_Recording_2021-10-15_at_8.46.03_AM.mov">Raw video file</a></p>
     </div>
     <p class="runDescription"><em></em></p>
