--- a/runs/8/index.html
+++ b/runs/8/index.html
@@ -27,10 +27,9 @@
     <h2 class="reduceTopMargin">LiteCave's run</h2>
     <div class="runContainer">
         <p>0:03:14 (rank #4)</p>
-        <video width="723" height="409" controls>
-            <source src="https://youtu.be/jNPPAfUz_dw">
-        </video><br><br>
-        <p class="reduceTopMargin"><a class="runLink" href="https://youtu.be/jNPPAfUz_dw">Raw video file</a></p>
+        <iframe width="727" height="409" src="https://www.youtube.com/embed/jNPPAfUz_dw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <br><br>
+        <p class="reduceTopMargin"><a class="runLink" href="https://www.youtube.com/watch?v=jNPPAfUz_dw">Raw video file</a></p>
     </div>
     <p class="runDescription"><em></em></p>
     <p>Verified by <strong>Deltara</strong> - Took place on <strong>10/15/2021</strong></p>
