--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
     <h1>SPWN</h1>
     <h2 class="reduceTopMargin">Speedruns</h2>
-    <p>A programming language for Geometry Dash https://discord.gg/amgmf5957T</p>
+    <p>Leaderboards for the SPWN Speedrunning Association. Discord server: <a href="https://discord.gg/amgmf5957T">https://discord.gg/amgmf5957T</a></p>
 
     <h2>Categories</h2>
     <div class="reduceTopMargin" style="text-align: center;"><a class="categoryLink" href="categories/Any">Any%</a><a class="categoryLink" href="categories/ArchInstall">ArchInstall%</a><a class="categoryLink" href="categories/Low">Low%</a><a class="categoryLink" href="categories/100">100%</a><a class="categoryLink" href="categories/1000">1000%</a><a class="categoryLink" href="categories/Mastergame">Mastergame%</a><a class="categoryLink" href="categories/Meme">Meme%</a></div>
