--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <meta property="og:title" content="SPWN - Speedruns Leaderboard" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="Leaderboards for the SPWN Speedrunning Association. Discord server: <a href="https://discord.gg/amgmf5957T">https://discord.gg/amgmf5957T</a>" />
+    <meta property="og:description" content="Leaderboards for the SPWN Speedrunning Association. Discord server: https://discord.gg/amgmf5957T" />
     <meta property="og:url" content="https://fl1pnatic.github.io/spwnrun/" />
     <meta property="og:image" content="https://https://fl1pnatic.github.io/spwnrun//assets/img/logo.png" />
     <meta property="og:image:secure_url" content="https://https://fl1pnatic.github.io/spwnrun//assets/img/logo.png" />
