--- a/runs/9/index.html
+++ b/runs/9/index.html
@@ -12,7 +12,7 @@
 
     <meta property="og:title" content="SPWN - Any% - LiteCave" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="" />
+    <meta property="og:description" content="Used code: $.print('a')" />
     <meta property="og:url" content="https://fl1pnatic.github.io/spwnrun//9/index.html" />
     <meta property="og:image" content="https://https://fl1pnatic.github.io/spwnrun//assets/img/logo.png" />
     <meta property="og:image:secure_url" content="https://https://fl1pnatic.github.io/spwnrun//assets/img/logo.png" />
@@ -26,13 +26,13 @@
     <h1><a href="../../">SPWN</a> - <a href="../../categories/Any">Any%</a></h1>
     <h2 class="reduceTopMargin">LiteCave's run</h2>
     <div class="runContainer">
-        <p>0:10:318 (rank #2)</p>
+        <p>0:15:18 (rank #2)</p>
         <iframe width="727" height="409" src="https://www.youtube.com/embed/49pctRWUo98" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <br><br>
         <p class="reduceTopMargin"><a class="runLink" href="https://www.youtube.com/watch?v=49pctRWUo98">Raw video file</a></p>
     </div>
-    <p class="runDescription"><em></em></p>
-    <p>Verified by <strong>Deltara</strong> - Took place on <strong>10/15/2021</strong></p>
+    <p class="runDescription"><em>Used code: $.print('a')</em></p>
+    <p>Verified by <strong>Deltara</strong> - Took place on <strong>10/16/2021</strong></p>
 </body>
 
 </html>
