--- a/runs/11/index.html
+++ b/runs/11/index.html
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SPWN - Low% - LiteCave</title>
+    <title>SPWN - Low% - Fl1pnatic</title>
 
     <link rel="stylesheet" href="../../css/style.css">
     <link rel="icon" href="../../assets/img/logo.png">
 
-    <meta property="og:title" content="SPWN - Low% - LiteCave" />
+    <meta property="og:title" content="SPWN - Low% - Fl1pnatic" />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="" />
-    <meta property="og:url" content="https://fl1pnatic.github.io/spwnrun//8/index.html" />
+    <meta property="og:url" content="https://fl1pnatic.github.io/spwnrun//11/index.html" />
     <meta property="og:image" content="https://https://fl1pnatic.github.io/spwnrun//assets/img/logo.png" />
     <meta property="og:image:secure_url" content="https://https://fl1pnatic.github.io/spwnrun//assets/img/logo.png" />
     <meta property="og:image:alt" content="SPWN FTW" />
@@ -24,15 +24,15 @@
 
 <body>
     <h1><a href="../../">SPWN</a> - <a href="../../categories/Low">Low%</a></h1>
-    <h2 class="reduceTopMargin">LiteCave's run</h2>
+    <h2 class="reduceTopMargin">Fl1pnatic's run</h2>
     <div class="runContainer">
-        <p>0:03:14 (rank #5)</p>
-        <iframe width="727" height="409" src="https://www.youtube.com/embed/jNPPAfUz_dw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <p>0:03:03 (rank #4)</p>
+        <video width="723" height="409" controls><source src="https://cdn.discordapp.com/attachments/897932486250758165/898598834807128105/8Wy6F7pXCU.mp4"></video>
         <br><br>
-        <p class="reduceTopMargin"><a class="runLink" href="https://www.youtube.com/watch?v=jNPPAfUz_dw">Raw video file</a></p>
+        <p class="reduceTopMargin"><a class="runLink" href="https://cdn.discordapp.com/attachments/897932486250758165/898598834807128105/8Wy6F7pXCU.mp4">Raw video file</a></p>
     </div>
     <p class="runDescription"><em></em></p>
-    <p>Verified by <strong>Deltara</strong> - Took place on <strong>10/15/2021</strong></p>
+    <p>Verified by <strong>tags</strong> - Took place on <strong>10/17/21</strong></p>
 </body>
 
 </html>
